# newsAPI

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
config/: settings.py
core/: security.py
database/: database.py
dependencies/: auth.py  news.py
model/: auth.py  enums.py  news.py  user.py
repositories/: news_repository.py  token_repository.py  user_repository.py
routes/: admin.py  auth.py  news.py
services/: auth_service.py  news_service.py
