[project]
name = "newsapigithub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.137.0",
    "httpx>=0.28.0",
    "motor>=3.7.1",
    "pydantic-settings>=2.6.0",
    "pyjwt>=2.13.0",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
newsapi = "main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config", "model"]
